# mcp-fastapi

./: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
fastapi_openai_mcp/: api_server.py  mcp_server.py
tests/: debug_test.py  test_api.py  test_direct.py  test_real_api.py  test_tool_flow.py
